# ZenithEngine

./: .gitattributes  .gitignore  .gitmodules  AssImpInfo.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  HorusEngine.ngfx-proj  HorusEngine.sln  README.md  build.ps1
Common/: BasicException.h  CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  Surface.cpp  Surface.h  Utils.cpp  Utils.h  WinAPI.h  WinApiException.cpp  WinApiException.h  WinApiExceptionMacros.h  packages.config
Common/Include/: BasicTypes.h  CmdParser.h  ColorF3.h  ColorF4.h  Intrinsics.h  LockGuard.h  Logger.h  Macros.h  MathExt.h  MathFP16.h  MathLight.h  Perf.h  PerfGuard.h  Pixel.h  PixelFormat.h  PoolAllocator.h  Ptr.h  Table.h  Task.h  ThreadPool.h  Timer.h  Types.h  Utils.h  WarningGuardOff.h  WarningGuardOn.h  pch.h
Common/Include/Allocator/: BlockingQueue.h  ChunkedTLSF.h  FixedPool.h  Pool.h
Common/Include/DDS/: FormatDDS.h  Header.h  HeaderDXT10.h  PixelFormatDDS.h  Utils.h
Common/Include/Data/: ColorF3.h  ColorF4.h  Pixel.h  Surface.h
Common/Include/Exception/: BasicException.h  DirectXTexException.h  GenericException.h  ImageException.h  WinApiException.h
Common/Include/GFX/: API.h  DX.h  Surface.h
Common/Include/IO/: File.h  FileFlags.h
Common/Include/WinAPI/: WinAPI.h
Common/Source/: CmdParser.cpp  ColorF3.cpp  ColorF4.cpp  Intrinsics.cpp  Logger.cpp  MathExt.cpp  MathLight.cpp  Perf.cpp  ThreadPool.cpp  Utils.cpp
Common/Source/DDS/: Utils.cpp
Common/Source/Data/: ColorF3.cpp  ColorF4.cpp  Surface.cpp
Common/Source/Exception/: BasicException.cpp  DirectXTexException.cpp  GenericException.cpp  ImageException.cpp  WinApiException.cpp
Common/Source/GFX/: Surface.cpp
Common/Source/IO/: File.cpp
Demo/: CMakeLists.txt
Demo/Data/Runtime/: imgui_default.ini
Demo/Include/: App.h
Demo/Source/: App.cpp  LegacyApp.txt  WinMain.cpp
EditTool/: CMakeLists.txt  EditTool.vcxproj  EditTool.vcxproj.filters  Logger.cpp  Logger.h  ScriptProcess.cpp  ScriptProcess.h  TextureEdit.cpp  TextureEdit.h  main.cpp
EditTool/Include/: Logger.h  ScriptProcess.h  TextureEdit.h
EditTool/Source/: Logger.cpp  ScriptProcess.cpp  TextureEdit.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/API/: Zenith.h
Engine/Data/: imgui_default.ini  settings.json
Engine/Include/: App.h  Engine.h  EngineParams.h  Settings.h  SettingsInitParams.h  StartupConfig.h  Table.h  Timer.h  Zenith.h  pch.h
Engine/Include/Camera/: BaseCamera.h  CameraPool.h  FloatingCamera.h  ICamera.h  ProjectionData.h
Engine/Include/Data/: AssetsStreamer.h  Camera.h  CubemapSource.h  DirectionalLight.h  Entity.h  ExternalModelOptions.h  Geometry.h  LOD.h  Library.h  Light.h  LightBuffer.h  MaterialPBR.h  Mesh.h  Model.h  Operations.h  PointLight.h  ResourceLocation.h  ResourceManager.h  Scene.h  SceneManager.h  SkyboxSource.h  SpotLight.h  Tags.h  Transform.h
Engine/Include/Exception/: DeviceRemovedException.h  Exceptions.h  GfxDebugException.h  GfxExceptionMacros.h  GraphicsException.h  RenderGraphCompileException.h
Engine/Include/GFX/: AOType.h  BasicObject.h  ChainPool.h  CommandList.h  CommandSignature.h  CommandType.h  Context.h  DXGIDebugInfoManager.h  DeferredContext.h  Device.h  DiskManager.h  DisplayProperties.h  FfxApiFunctions.h  FfxBackendInterface.h  FfxEffects.h  FfxException.h  GFile.h  GPerf.h  GfxObject.h  Graphics.h  IContext.h  IObject.h  IndexData.h  IndirectCommandType.h  MainContext.h  Material.h  MeshData.h  NgxInterface.h  Object.h  Primitive.h  QueueType.h  RayTracingTier.h  ShaderModel.h  ShaderPresence.h  ShaderSlot.h  SwapChain.h  TonemapperType.h  TransformBuffer.h  UpscalerType.h  VendorGPU.h  (+3 more)
Engine/Include/GUI/: DearImGui.h  DialogWindow.h  GUIManager.h  ImGuiConfig.h  ImGuiManager.h  Manager.h
Engine/Include/IO/: CompressionFormat.h  Compressor.h  DiskManager.h  File.h  FileFlags.h  FileStatus.h
Engine/Include/RHI/: ApiType.h  Backend.h
Engine/Include/WinAPI/: Keyboard.h  Mouse.h  Window.h
Engine/Include/Window/: BaseWindow.h  Keyboard.h  MainWindow.h  Mouse.h  WindowPlatform.h
Engine/Shader/: Permutations.cmake
Engine/Shader/CS/: AmbientOcclusionCS.hlsl  LPMFilterCS.hlsl  LightCombineCS.hlsl  NVImageScalingCS.hlsl  SSAOBlurCS.hlsl  SSAODenoiseCS.hlsl  SSAOMainCS.hlsl  SSAOPrefilterDepthCS.hlsl
Engine/Shader/Common/: Buffers.hlsli  CBuffer.hlsli  CommonUtils.hlsli  DepthBuffer.hlsli  DynamicDataCB.hlsli  GBufferUtils.hlsli  LightBuffer.hlsli  PBRDataCB.hlsli  Samplers.hlsli  SettingsDataCB.hlsli  TransformCB.hlsli  Utils.hlsli  WarningGuardOff.hlsli  WarningGuardOn.hlsli  WorldDataCB.hlsli
Engine/Shader/GS/: ShadowCubeDepthGS.hlsl  ShadowCubeGS.hlsl
Engine/Shader/GeometryShader/: ShadowCubeGS.hlsl
Engine/Shader/PS/: AmbientOcclusionPS.hlsl  BlurPS.hlsl  DirectionalLightPS.hlsl  ExposurePS.hlsl  FullscreenPS.hlsl  GammaRemovePS.hlsl  HDRGammaPS.hlsl  LightCombinePS.hlsl  MergeIndirectLightPS.hlsl  PbrPS.hlsl  PhongPS.hlsl  PointLightPS.hlsl  ReinhardPS.hlsl  SSAOBlurPS.hlsl  ShadowPS.hlsl  SkyboxPS.hlsl  SolidPS.hlsl  SpotLightPS.hlsl  TonemapPS.hlsl  UtilsPS.hlsli  VelocityPS.hlsl
Engine/Shader/VS/: FullscreenVS.hlsl  LambertVS.hlsl  LightVS.hlsl  OffsetVS.hlsl  PhongDepthVS.hlsl  PhongVS.hlsl  ShadowCubeDepthVS.hlsl  ShadowCubeVS.hlsl  ShadowVS.hlsl  SkyboxVS.hlsl  SolidVS.hlsl
Engine/Shader/VertexShader/: OffsetVS.hlsl  PhongVS.hlsl
Engine/Source/: Engine.cpp  EngineParams.cpp  Settings.cpp  SettingsInitParams.cpp  StartupConfig.cpp  Timer.cpp
Engine/Source/Camera/: CameraPool.cpp  PersonCamera.cpp
Engine/Source/Data/: AssetsStreamer.cpp  Camera.cpp  CubemapSource.cpp  Geometry.cpp  Operations.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  SkyboxSource.cpp
Engine/Source/Exception/: GfxDebugException.cpp  GraphicsException.cpp  ModelException.cpp  RenderGraphCompileException.cpp
Engine/Source/GFX/: BasicObject.cpp  DXGIDebugInfoManager.cpp  FfxBackendInterface.cpp  FfxEffects.cpp  FfxException.cpp  GPerf.cpp  Graphics.cpp  NgxInterface.cpp  Primitive.cpp  UpscalerType.cpp  (+1 more)
Tools/: CMakeLists.txt
Tools/CubeConv/: CMakeLists.txt
(+1877 files in other folders)
